--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://ffn96u87j5ogvehy.cbetxkdyhwsb.us-east-1.rds.amazonaws.com/szf9hvv5xhsn76oz?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/algamoneyapi?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=ijp8a9w1afxl03q0
-spring.datasource.password=un4sqgziayqp58i4
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.show-sql=true
 
