--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.date-format=yyyy-MM-dd
 
 spring.profiles.active=oauth-security
+
+logging.level.com.example.algamoney.api=DEBUG
+
+algamoney.mail.host=smtp.gmail.com
+algamoney.mail.port=587
+algamoney.mail.username=roberto.atanasio.pl@gmail.com
+algamoney.mail.password=@@Egito001
