--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ algamoney.mail.host=smtp.gmail.com
 algamoney.mail.port=587
 algamoney.mail.username=roberto.atanasio.pl@gmail.com
 algamoney.mail.password=@@Egito001
+
+algamoney.s3.access-key-id=AKIAIZGR7NCDY6OWWZGA
+algamoney.s3.secret-access-key=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
