--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,10 @@ spring.profiles.active=oauth-security
 
 logging.level.com.example.algamoney.api=DEBUG
 
-algamoney.mail.host=smtp.gmail.com
-algamoney.mail.port=587
-algamoney.mail.username=roberto.atanasio.pl@gmail.com
-algamoney.mail.password=......
+#algamoney.mail.host=smtp.gmail.com
+#algamoney.mail.port=587
+#algamoney.mail.username=roberto.atanasio.pl@gmail.com
+#algamoney.mail.password=
 
-algamoney.s3.access-key-id=......
-algamoney.s3.secret-access-key=.....
+#algamoney.s3.access-key-id=
+#algamoney.s3.secret-access-key=
