--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ logging.level.com.example.algamoney.api=DEBUG
 
 #algamoney.mail.host=smtp.gmail.com
 #algamoney.mail.port=587
-#algamoney.mail.username=roberto.atanasio.pl@gmail.com
+#algamoney.mail.username=roberto....@gmail.com
 #algamoney.mail.password=
 
 #algamoney.s3.access-key-id=
